# movan_engine

./: CMakeLists.txt  LICENSE  MovanStudio.cpp  MovanStudio.h  README.md
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
Engine/Source/MetaParser/Parser/: parser.cpp  parser.h
Engine/Source/MetaParser/Parser/Common/: precompiled.h  schema_module.h
Engine/Source/MetaParser/Parser/Cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
Engine/Source/MetaParser/Parser/Generator/: generator.cpp  generator.h  reflection_generator.h  serializer_generator.h
Engine/Source/MetaParser/Parser/LanguageTypes/: type_info.h
Engine/Source/MetaParser/Parser/Meta/: meta_data_config.h  meta_info.cpp  meta_info.h  meta_utils.cpp  meta_utils.h  meta_utils.hpp
Engine/Source/MetaParser/Parser/TemplateManager/: template_manager.cpp  template_manager.h
Engine/Source/Runtime/: CMakeLists.txt  engine.cpp  engine.cppm  engine.h
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Base/: hash.h  macro.h
Engine/Source/Runtime/Core/Function/Global/: global_context.cpp  global_context.h
Engine/Source/Runtime/Core/LogSystem/: log_system.cpp  log_system.h
Engine/Source/Runtime/Core/Math/: CMakeLists.txt  math.cpp  math.h  matrix4x4.cpp  matrix4x4.h  random.cpp  random.h  vector2.h
Engine/Source/Runtime/Core/Meta/: json.h
Engine/Source/Runtime/Core/Meta/Reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
Engine/Source/Runtime/Core/Meta/Serializer/: serializer.cpp  serializer.h
Engine/Source/Runtime/Platform/FileService/: file_service.cpp  file_service.h
Engine/Source/Runtime/Platform/Path/: path.cpp  path.h
Engine/Source/editor/: CMakeLists.txt
Engine/Source/editor/source/: main.cpp
engine/: CMakeLists.txt
engine/source/meta_parser/: CMakeLists.txt
engine/source/runtime/: CMakeLists.txt  engine.cpp
engine/source/runtime/core/base/: hash.h  lru_cache.h
engine/source/runtime/core/meta/: json.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
