set(TARGET_NAME MovanRuntime)

set(CMAKE_CXX_STANDARD ${MOVAN_MAIN_CXX_STANDARD})
set(CMAKE_CXX_STANDARD_REQUIRED ON)


file(GLOB_RECURSE HEADER_FILES "*.h" "*.cppm")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})
add_library(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})