set(TARGET_NAME MovanRuntime)

set(CMAKE_CXX_STANDARD ${MOVAN_MAIN_CXX_STANDARD})
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(JSON_INCLUDE ${THIRD_PARTY_DIR}/json11)

message(STATUS "THIRD_PARTY_DIR=${THIRD_PARTY_DIR}")
message(STATUS "JSON_INCLUDE=${JSON_INCLUDE}")

add_library(json11 ${JSON_INCLUDE}/json11.cpp)
set_target_properties(json11 PROPERTIES FOLDER "ThirdParty/json11")


file(GLOB_RECURSE HEADER_FILES "*.h" "*.cppm")
message(STATUS "MovanRuntime HEADER_FILES: ${HEADER_FILES}")

file(GLOB_RECURSE SOURCE_FILES "*.cpp")
message(STATUS "MovanRuntime HEADER_FILES: ${SOURCE_FILES}")


source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})
add_library(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})


set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD ${MOVAN_MAIN_CXX_STANDARD})
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Engine")

# being a cross-platform target, we enforce standards conformance on MSVC
target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")

# Link dependencies
target_link_libraries(${TARGET_NAME} PUBLIC spdlog::spdlog)
target_link_libraries(${TARGET_NAME} PRIVATE tinyobjloader stb)
target_link_libraries(${TARGET_NAME} PUBLIC glfw)
target_link_libraries(${TARGET_NAME} PUBLIC imgui)
target_link_libraries(${TARGET_NAME} PUBLIC Jolt)
target_link_libraries(${TARGET_NAME} PUBLIC lua_static sol2)
target_link_libraries(${TARGET_NAME} PUBLIC ${vulkan_lib})
target_link_libraries(${TARGET_NAME} PRIVATE $<BUILD_INTERFACE:json11>)


target_include_directories(
        ${TARGET_NAME}
        PUBLIC $<BUILD_INTERFACE:${JSON_INCLUDE}>
)

target_include_directories(
        ${TARGET_NAME}
        PUBLIC $<BUILD_INTERFACE:${ENGINE_ROOT_DIR}/source/runtime>
        $<INSTALL_INTERFACE:include/${TARGET_NAME}-${PROJECT_VERSION}>
)

set(MOVAN_RUNTIME_HEADS "${HEADER_FILES}" PARENT_SCOPE)